--- a/app/src/main/res/layout/fragment_end.xml
+++ b/app/src/main/res/layout/fragment_end.xml
@@ -107,11 +107,16 @@
         app:layout_constraintTop_toBottomOf="@+id/GlobalRankView" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="409dp"
-        android:layout_height="412dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="254dp"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/recyclerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@+id/back"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/countryView" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
