--- a/app/src/main/res/layout/item_score.xml
+++ b/app/src/main/res/layout/item_score.xml
@@ -50,7 +50,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         tools:text="accuracy"
-        android:text="@string/accuracy_result"
+        android:text="@string/accuracy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mods" />
 
